--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                                 <a href="https://guardianui.gitbook.io/beta-documentation/" class="nav-link">Docs</a>
                             </li>
                             <li>
+                                <a href="https://github.com/GuardianUI" class="nav-link">Github</a>
+                            </li>
+                            <li>
                                 <a
                                     href="https://airtable.com/shr5P7WXayIw9zN1R"
                                     target="_blank"
@@ -105,6 +108,7 @@
                         </ul>
 
                         <div class="hamburger">
+                            <span></span>
                             <span></span>
                             <span></span>
                             <span></span>
