--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <a href="https://guardianui.com/ai" class="nav-link">AI Test Automation</a>
                             </li>
                             <li>
-                                <a href="https://guardianui.gitbook.io/beta-documentation/" class="nav-link">Docs</a>
+                                <a href="https://docs.guardianui.com/overview/readme" class="nav-link">Docs</a>
                             </li>
                             <li>
                                 <a href="https://github.com/GuardianUI" class="nav-link">Github</a>
@@ -902,7 +902,7 @@
                         <li><h4>Company</h4></li>
                         <li>
                             <a
-                                href="https://guardianui.gitbook.io/beta-documentation/"
+                                href="https://docs.guardianui.com/overview/readme"
                                 target="_blank"
                                 rel="noreferrer noopener"
                                 >Documentation</a
