--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="btn"
-                                    data-testid="join-waitlist-button">Join Waitlist</a
+                                    data-testid="join-waitlist-button">Try for Free</a
                                 >
                             </li>
                         </ul>
@@ -139,7 +139,7 @@
                                 target="_blank"
                                 rel="noreferrer noopener"
                                 class="btn"
-                                data-testid="join-waitlist-button-hero">Join Waitlist</a
+                                data-testid="join-waitlist-button-hero">Try for Free</a
                             >
                         </div>
                         <div class="hero-img">
@@ -223,7 +223,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link-monitoring">Join Waitlist</a
+                                    data-testid="join-waitlist-link-monitoring">Try for Free</a
                                 >
                             </div>
                             <div class="service-img">
@@ -289,7 +289,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link-tests">Join Waitlist</a
+                                    data-testid="join-waitlist-link-tests">Try for Free</a
                                 >
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link-alerts">Join Waitlist</a
+                                    data-testid="join-waitlist-link-alerts">Try for Free</a
                                 >
                             </div>
                             <div class="service-img">
@@ -385,7 +385,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link-metrics">Join Waitlist</a
+                                    data-testid="join-waitlist-link-metrics">Try for Free</a
                                 >
                             </div>
                             <div class="service-image-flex">
